fix controll visible, add hidd button, fix marks z-index

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,6 +13,11 @@
   /* map */
   .container {
     position: relative;
+    width: fit-content;
+  }
+  .back{
+    max-width: 100%;
+    z-index: 2;
   }
   
   .mark {
@@ -22,12 +27,16 @@
     width: 15px;
     height: 15px;
     border-color: green;
-    z-index: 3;
+}
+
+.position{
+  z-index: 2;
 }
   
   .markIco {
     width: 15px;
     height: 15px;
+    z-index: 2;
   }
   
   .description {
@@ -43,21 +52,42 @@
     color: wheat;
     padding-right: 10px;
     padding-left: 10px;
+    z-index: 1;
   }
   
   .description img {
     max-width: 10vw;
     max-height: 10vw;
+    z-index: 1;  
   }
+
   
   /* control */
   .controll {
-    position: absolute;
+    display: flex;
+    align-items: center;
+    position: fixed;
     top: 0;
     left: 0;
+    z-index: 1;
+    padding: 10px;
+    color: aliceblue;
+    background-color:rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(1.5rem);
+    transition: left 0.3s ease-out;
   }
-  
+  .filterControl{
+    padding-right: 15px;
+  }
+  .filterControl ul{
+    list-style-type: none;
+  }
+
   .hidd {
     display: none;
   }
+  .Controllhidd {
+    
+  }
+ 
   
